--- a/dependencies.yml
+++ b/dependencies.yml
@@ -2,21 +2,18 @@ packages:
   # codegen, macros to generate dbt code
   # https://hub.getdbt.com/dbt-labs/codegen/latest/
   - package: dbt-labs/codegen
-    version: [">=0.9.0"]
+    version: 0.13.1
 
   # audit_helper, macros for when performing data audits
   # https://hub.getdbt.com/dbt-labs/audit_helper/latest/
   - package: dbt-labs/audit_helper
-    version: [">=0.9.0", "<1.0.0"]
+    version: 0.12.1
 
-  - package: calogica/dbt_expectations
-    version: [">=0.10.0", "<0.11.0"]
-
-  - package: Snowflake-Labs/dbt_constraints
-    version: [">=0.6.0", "<0.7.0"]
+  - package: metaplane/dbt_expectations
+    version: 0.10.8
 
   - package: dbt-labs/dbt_project_evaluator
-    version: [">=0.8.0", "<0.9.0"]
+    version: 1.0.0
 
 projects:
   - name: RRProject_jaffleshop
